--- a/work/vote4/index.html
+++ b/work/vote4/index.html
@@ -30,7 +30,7 @@
           <p>Ever had trouble deciding where to eat with your friends?</p>
           <p><strong>Vote 4</strong> is a mobile app concept designed to solve that problem. Inspired by my indecisive group of friends, I worked on Vote 4 with a couple classmates for an mobile interaction design project. Our target demographic was groups of teenagers and young adults who have trouble picking eating destinations due to differing tastes or lack of strong opinions.</p>
           <h2>Research</h2>
-          <p>We consulted similar such Yelp, Urbanspoon, and Foodspotting and found that while helpful for a single user trying to find a restaurant, they did not solve the <strong>group coordination</strong> problem that we were targetting.</p>
+          <p>We researched similar services such Yelp, Urbanspoon, and Foodspotting and found that while helpful for a single user trying to find a restaurant, they did not solve the <strong>group coordination</strong> problem that we were targetting.</p>
           <h2>Design</h2>
           <p>I suggested the use of a four photo tiles as the main screen to make the app feel simple yet visually engaging from the start. I led a whiteboard wireframe construction session based on this idea and then refined the results into paper wireframes, then digital wireframes, and finally digital mockups produced in Photoshop. We then used Keynote to construct an animated demo.</p>
           <h2>Team</h2>
