--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="current">
         <div class="item">
           <div class="cover">
-            <div class="buttons">
+            <div class="buttons double">
               <a href="/work/snappy/" class="info"><div class="icon"></div>Info</a>
               <a href="http://chrsl.net/snappy/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
