--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Chris Lee</title>
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Karla">
+  <link href='http://fonts.googleapis.com/css?family=Abel|Cousine' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript">
     var _gaq = _gaq || [];
@@ -19,18 +19,50 @@
   </script>
 </head>
 <body>
-  <h1>Chris Lee</h1>
-  <p class="location">San Francisco</p>
+  <h1>Hello, internet</h1>
   <div class="main">
-    <a href="http://chrome.blogspot.com/" class="google">Interaction designer, Google Chrome</a>
-    <a href="http://www.plusbible.com/" class="plusbible">Hacker, +Bible</a>
-    <a href="http://www.hcii.cmu.edu/" class="cmu">Carnegie Mellon HCI 2013</a>
+    <p>My name is Chris Lee. I live in San Francisco. I am a designer. I believe in a Designer*.</p>
+    <p>During the weekdays, I help design and prototype <a href="http://chrome.blogspot.com/" target="_blank">Google Chrome</a>. I love Google because it's a lot of smart, creative people working on meaningful problems. I don't believe technology is the end solution to all our problems, but I do believe it can help immensely.</p>
+    <p>I worship with <a href="http://eucharistsf.org/" target="_blank">Eucharist</a>. I love Eucharist because it's a small, authentic patchwork of people who have recognized all the many complex and difficult realities of life and have come to the conclusion that the countercultural lifestyle of Jesus is the way.</p>
+    <p>I serve with <a href="http://sfcityimpact.com/" target="_blank">City Impact</a>. On Sunday afternoons, I knock on doors of low-income apartment buildings in San Francisco's Tenderloin district and greeting the residents there with snacks and the hope of Jesus. I love this experience because it's mutually life-giving: I bless and am blessed through it. It helps ground me in reality amidst a privileged Silicon Valley culture.</p>
+    <p>On the side, I work on <a href="http://www.plusbible.com/" target="_blank">+Bible</a> with a handful of other Christians from SV tech companies. It's a digital Bible experience optimized for collaborative notetaking. I believe that much of technology can distract a life of faith but carefully designed technology can help it. I love this experience because it's the direct intersection of two things I love.</p>
+    <p>I graduated from <a href="http://www.hcii.cmu.edu/" target="_blank">Carnegie Mellon</a>  in 2013 with a degree in computer science and human-computer interaction. I realized that the hardcore engineering life wasn't for me, but stuck with it for some reason. It worked out, since I now happily <a href="http://hackdesign.org/lesson/30/" target="_blank">design with code</a>.</p>
+    <p>I am <a href="http://en.wikipedia.org/wiki/INTP" target="_blank">INTP</a> and <a href="http://www.eclecticenergies.com/enneagram/type5.php" target="_blank">type 5</a>.</p>
+
+    <div class="dark">
+      <p>
+        I believe in God, the Father almighty,<br/>
+        creator of heaven and earth.<br/>
+      </p>
+      <p>
+        I believe in Jesus Christ, his only Son, our Lord,<br/>
+        who was conceived by the Holy Spirit,<br/>
+        born of the Virgin Mary,<br/>
+        suffered under Pontius Pilate,<br/>
+        was crucified, died, and was buried;<br/>
+        he descended to the dead.<br/>
+        On the third day he rose again;<br/>
+        he ascended into heaven,<br/>
+        he is seated at the right hand of the Father,<br/>
+        and he will come to judge the living and the dead.<br/>
+        </dl>
+      <p>
+        I believe in the Holy Spirit,<br/>
+        the holy catholic Church,<br/>
+        the communion of saints,<br/>
+        the forgiveness of sins,<br/>
+        the resurrection of the body,<br/>
+        and the life everlasting.<br/>
+        Amen.<br/>
+      </p>
+    </div>
+    <p>*I don't automatically dislike you if you disagree with me.</p>
   </div>
   <div class="contact">
-    <a href="chris@chrsl.net">Email</a>
-    <a href="http://blog.chrsl.net/">Blog</a>
-    <a href="http://dribbble.com/Cleer">Dribbble</a>
-    <a href="https://twitter.com/cleerview">Twitter</a>
+    <a href="mailto:chris@chrsl.net">Email</a>
+    <a href="http://blog.chrsl.net/" target="_blank">Blog</a>
+    <a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a>
+    <a href="https://twitter.com/cleerview" target="_blank">Twitter</a>
   </div>
 </body>
 </html>
